<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/x" />

                    <TextView
                        android:id="@+id/x_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />
                </TableRow>

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/y" />

                    <TextView
                        android:id="@+id/y_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />
                </TableRow>

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/z" />

                    <TextView
                        android:id="@+id/z_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />
                </TableRow>

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/direction" />

                    <TextView
                        android:id="@+id/direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/start_and_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/compass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imgCompass"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/compass"/>

            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/coordinates_text" />

                    <TextView
                        android:id="@+id/coordinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"/>

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="300dp">

                <TextureView
                    android:id="@+id/textureView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>
    </LinearLayout>
</ScrollView>

